@@ -37,6 +37,7 @@ SOURCES += add_program.cpp
 SOURCES += add_provider.cpp
 SOURCES += add_remark.cpp
 SOURCES += add_user.cpp
+SOURCES += affidavit_picker.cpp
 SOURCES += affiliate_report.cpp
 SOURCES += createdb.cpp
 SOURCES += davit.cpp
@@ -68,6 +69,7 @@ SOURCES += arbitron_report.cpp
 SOURCES += affiliatesbyprogram_report.cpp
 SOURCES += raaffiliate_report.cpp
 SOURCES += affidavit_report.cpp
+SOURCES += missingaffidavit_report.cpp
 SOURCES += missingaffidavitcontact_report.cpp
 SOURCES += list_contacts.cpp
 SOURCES += contactlistview.cpp
@@ -87,6 +89,7 @@ HEADERS += add_program.h
 HEADERS += add_provider.h
 HEADERS += add_remark.h
 HEADERS += add_user.h
+HEADERS += affidavit_picker.h
 HEADERS += createdb.h
 HEADERS += davit.h
 HEADERS += daypicker.h
