@@ -696,3 +696,6 @@
 2014-12-09 Fred Gleason <fredg@paravelsystems.com>
 	* Renamed 'davit/missingaffidavit_report.cpp' to
 	'davit/missingaffidavitcontact_report.cpp'.
+2014-12-09 Fred Gleason <fredg@paravelsystems.com>
+	* Implemented a 'Missing Affidavit Submissions' report in
+	'davit/missingaffidavit_report.cpp'.
